<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/nav_vertical_padding">

        <ImageView
            style="@style/NavLogo"
            android:contentDescription="@string/logo_image_content_descriptor" />

        <View style="@style/NavPadding" />

        <ImageView
            android:id="@+id/close_button"
            style="@style/NavButton.Close"
            android:contentDescription="@string/close_button_content_descriptor" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/question_text"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#585858"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/negative_button"
        style="@style/BigButton"
        android:layout_marginTop="8dp"
        android:text="@string/tested_negative" />

    <Button
        android:id="@+id/positive_button"
        style="@style/BigButton"
        android:text="@string/tested_positive" />

    <TextView
        android:id="@+id/negative_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/thanks_for_update"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/continue_button"
        style="@style/BigButton.Blue"
        android:layout_marginTop="16dp"
        android:text="@string/continue_button"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/positive_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/question_date"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/date_button"
        style="@style/BigButton"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tools:text="April 15, 2020"
        tools:visibility="visible" />

    <Button
        android:id="@+id/report_button"
        style="@style/BigButton.Blue"
        android:layout_marginTop="24dp"
        android:text="@string/report"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/report_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:textAlignment="center"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
